Fix 3 hearts spacing in footer

--- a/styles.css
+++ b/styles.css
@@ -606,6 +606,7 @@ a {
 
 .final-message {
     margin-top: 4rem;
+    margin-bottom: 3rem;
 }
 
 .final-hearts {
